--- a/package.json
+++ b/package.json
@@ -20,9 +20,9 @@
     "expo-image-manipulator": "^9.2.2",
     "expo-status-bar": "~1.0.4",
     "lottie-react-native": "^4.0.3",
-    "react": "16.13.1",
+    "react": "17.0.1",
     "react-dom": "16.13.1",
-    "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
+    "react-native": "0.64.2",
     "react-native-fs": "^2.18.0",
     "react-native-gesture-handler": "^1.10.3",
     "react-native-reanimated": "^2.2.0",
